# api/routes/nutricionista.route.ts
@@ -5,5 +5,6 @@ const routes = Router()
 
 routes.get('/', NutricionistaController.listarNutricionistas)
 routes.get('/clientes/:id', NutricionistaController.buscarClientesPorNutricionistaId)
+routes.get('/clientes/pendentes/:id', NutricionistaController.buscarClientesPendentesPorNutricionistaId)
 
 export default routes
